swagger + flyway + security + docker update + some fixes